<resources>
    <string name="app_name">Project 0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="viewTitle">My Nanodegree Apps!</string>
    <string name="appButton1">SPOTIFY STREAMER</string>
    <string name="appButton2">SCORES APP</string>
    <string name="appButton3">LIBRARY APP</string>
    <string name="appButton4">BUILD IT BIGGER</string>
    <string name="appButton5">XYZ READER</string>
    <string name="appButton6">CAPSTONE: MY OWN APP</string>
</resources>
