<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton1"
        android:id="@+id/appButton1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/appButtons1to5"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton2"
        android:id="@+id/appButton2"
        android:layout_below="@+id/appButton1"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/appButtons1to5"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton3"
        android:id="@+id/appButton3"
        android:layout_below="@+id/appButton2"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/appButtons1to5"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton4"
        android:id="@+id/appButton4"
        android:layout_below="@+id/appButton3"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/appButtons1to5"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton5"
        android:id="@+id/appButton5"
        android:layout_below="@+id/appButton4"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/appButtons1to5"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="@dimen/appButtonsWidth"
        android:layout_height="@dimen/appButtonsHeight"
        android:text="@string/appButton6"
        android:id="@+id/appButton6"
        android:layout_below="@+id/appButton5"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/appButton6"
        android:onClick="sendMessage"/>

</RelativeLayout>
